--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 .blue-block {
-    background-color: darkgrey;
-    padding: 1rem;
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgb(52, 106, 167) 100%);
+    padding: .5rem;
 }
 
 .taskForm {
@@ -11,7 +11,7 @@
 }
 
 .task {
-    background-color: lightgray;
+    background: linear-gradient(90deg, rgb(90, 90, 100) 0%, rgb(135, 135, 209) 35%, rgb(98, 160, 231) 100%);
     margin: 1rem;
     padding: 1rem;
     display: grid;
@@ -19,8 +19,9 @@
 }
 
 button {
-    background-color: grey;
+    background-color: rgb(108, 108, 173);
     color: white;
+    border: none;
 }
 
 .hideLable {
