--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,26 +1,29 @@
-.blue-block {
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgb(52, 106, 167) 100%);
-    padding: .5rem;
+body {
+    background: linear-gradient(180deg, rgb(19, 19, 20) 0%, rgb(9, 38, 61) 35%, rgb(9, 53, 104) 100%);
+    color: white;
+}
+
+.tasks {
+    padding: 1rem;
+    display: grid;
+    gap: 1rem;
 }
 
 .taskForm {
-    background-color: darkgrey;
     padding: 1rem;
     display: grid;
-    gap: .5rem;
+    gap: 1rem;
 }
 
 .task {
-    background: linear-gradient(90deg, rgb(90, 90, 100) 0%, rgb(135, 135, 209) 35%, rgb(98, 160, 231) 100%);
-    margin: 1rem;
+    background-color: rgba(255, 255, 255, 0.25);
+    color: white;
     padding: 1rem;
     display: grid;
-    gap: .5rem;
+    gap: 1rem;
 }
 
 button {
-    background-color: rgb(108, 108, 173);
-    color: white;
     border: none;
 }
 
