--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,26 +1,34 @@
 body {
-    background: rgb(21, 40, 56);
+    background-image: linear-gradient(to bottom right, rgb(108, 117, 122), rgb(38, 45, 49));
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    /* background: rgb(21, 40, 56); */
     color: white;
 }
 
 .tasks {
-    padding: 1rem;
+    padding: 1em;
     display: grid;
-    gap: 1rem;
+    gap: 1em;
 }
 
 .taskForm {
-    /* padding: 1rem; */
+    /* padding: 1em; */
     display: grid;
-    gap: 1rem;
+    gap: 1em;
+    caret-color: black;
 }
 
 .task {
-    background-color: rgba(255, 255, 255, 0.25);
+    background-image: linear-gradient(to bottom right, rgb(54, 65, 71), rgb(20, 18, 49));
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 1em;
     color: white;
-    padding: 1rem;
+    padding: 1em;
     display: grid;
-    gap: 1rem;
+    gap: 1em;
     cursor: pointer;
     caret-color: transparent;
 }
