--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,19 @@ body {
     caret-color: black;
 }
 
+.addTask {
+    background-image: linear-gradient(to bottom right, rgb(54, 65, 71), rgb(20, 18, 49));
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 1em;
+    color: white;
+    padding: 1em;
+    margin: 1em;
+    display: grid;
+    gap: 1em;
+    cursor: pointer;
+    caret-color: transparent;
+}
+
 .task {
     background-image: linear-gradient(to bottom right, rgb(54, 65, 71), rgb(20, 18, 49));
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
