--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,3 @@
-body {
-    height: 100%;
-    margin: 0;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 .tasks {
     padding: 1em;
     display: grid;
@@ -48,6 +41,15 @@ body {
     padding: 1em;
     gap: 1em;
     cursor: pointer;
+}
+
+.taskLess {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.taskLessInfo {
+    text-align: right;
 }
 
 .taskEditButtons {
