uex and code improvements

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,12 @@
     margin: 1em;
 }
 
+.saveAndCancel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+}
+
 .taskFormTime {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
