uex and bug fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,13 @@
     gap: 2em;
 }
 
+.tasksHeader {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    gap: 1em;
+    margin: 1em;
+}
+
 .taskForm {
     margin: 1em;
 }
