--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 .tasks {
-    padding: 1em;
+    padding: 2em;
     display: grid;
     gap: 2em;
 }
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 1em;
-    margin: 1em;
+    /* margin: 1em; */
 }
 
 .taskForm {
