--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,7 +44,7 @@ input[type] {
 
 .taskFormTime {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 1em;
 }
 
